# aoc2018

./: .ghci  .gitignore  LICENSE  README.md  aoc2018.cabal  stack.yaml
src/: Main.hs  Util.hs
src/Days/: Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day3.hs  Day4.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Days.hs
