name:                aoc2018
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mryndzionek/aoc2018#readme
license:             BSD3
license-file:        LICENSE
author:              Mariusz Ryndzionek
maintainer:          mryndzionek@gmail.com
copyright:           Mariusz Ryndzionek (c) 2018
category:            Other
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aoc2018
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
                       -O2
  default-language:    Haskell2010
  extensions:          OverloadedStrings, TemplateHaskell
  build-depends:       base >= 4.7 && < 5,
                       containers, split, data-fix, safe, transformers,
                       timeit, mtl, permutation, primes, array, astar,
                       random, assert, listsafe, JuicyPixels, vector,
                       unordered-containers, time, diagrams, diagrams-lib,
                       diagrams-rasterific, palette, colour, text,
                       lens, pointedlist,
                       megaparsec, matrix, parallel, bytestring
  other-modules:       Util
                       Days.Days
                       Days.Day3
                       Days.Day4
                       Days.Day6
                       Days.Day7
                       Days.Day8
                       Days.Day9
                       Days.Day10
                       Days.Day11
                       Days.Day12
                       Days.Day13
                       Days.Day14
                       Days.Day15
